# t1

./: .gitignore  SendEmail.py  SendTelegram.py  SendTradingSignal.py  main.py  readme.md  requirements.txt
cloud_run_proj/: CLAUDE.md  CLAUDE_ko.md  README.md  main.py  pyproject.toml  schema.sql
cloud_run_proj/stockbot/: config.py  db.py  indicators.py  ingest.py  notifiers.py  signals.py  yf_client.py
cloud_run_proj/tests/: README.md  test_indicators.py
legacy/: AlertHistory.py  SendEmail.py  SendTelegram.py  readme.md
streamlit_proj/: CLAUDE.md  CLAUDE_ko.md  README.md  app.py  pyproject.toml
